# mae

./: .env  Cargo.toml  DEVELOPMENT.md  POSTGRES.md  POSTGRES_TABLE_FACTORY_AUDIT_AND_ACL.md  README.md  deny.toml
.cargo/: config.toml
.ci/: ci_env.toml
.git-hooks/: pre-commit
.github/workflows/: ci.yml  rust-integrity-guard.yaml
admin_migrations/: 000100_roles.sql  000300_create_status_enum.sql  000400_create_function_audit_enforce_timestamps_and_immutables.sql  000500_create_table_function.sql  000700_block_disallowed_ddl.sql  001200_priviledges.sql  01_create_function_audit_enforce_timestamps_and_immutables.sql  06_block_disallowed_ddl.sql  11_priviledges.sql
configuration/: base.yaml  test.yaml
migrations/: 00_create_status_enum.sql  01_create_function_audit_enforce_timestamps_and_immutables.sql  02_create_table_function.sql  03_create_function_roles_priviledges.sql  04_create_function_table_acl.sql  05_lockdown_table_acl.sql  20250711231845_create_repo_example_table.sql
repo_macro/src/: lib.rs  util.rs
scripts/: init_db.sh  smoke-test.sh  sqlx_premigration.sh
src/: context.rs  crypto.rs  error_response.rs  health.rs  lib.rs  request_context.rs  service.rs  session.rs  telemetry.rs  totp.rs  util.rs
src/app/: app.rs  build.rs  configuration.rs  mod.rs  run.rs
src/middleware/: get_context.rs  get_microservice_session.rs  get_service_session.rs  get_session.rs  mod.rs  scope.rs
src/posting/: controller.rs  mod.rs  step.rs
src/repo/: build.rs  builder.rs  default.rs  fields.rs  into_filter.rs  map_util.rs  mod.rs  select_update_builder.rs  type_def.rs
src/route/: health.rs  mod.rs  model.rs  response.rs  version.rs
src/testing/: context.rs  env.rs  mod.rs  must.rs
src/testing/container/: mod.rs  neo4j.rs  postgres.rs  rabbitmq.rs  redis.rs
src/testing/containers/: mod.rs  neo4j.rs  rabbitmq.rs  redis.rs
tests/: coverage_tests.rs  graphdb_settings.rs  lib.rs  prod_config_validation.rs  run_app_compat.rs
tests/common/: context.rs  env.rs  mod.rs  must.rs
tests/coverage/: configuration_unit.rs  context_unit.rs  mod.rs  route_unit.rs  telemetry_unit.rs
tests/mae/: build.rs  repo.rs
tests/repo/: crud.rs  fixture.rs  mod.rs
