[package]
name = "mae"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Mae is used to standardize and streamline the creation of micro-services."
homepage = "https://statbook.io"
readme = "./README.md"
repository = "https://github.com/MrCartaaa/mae"

[features]
test-requires-docker = []

[profile.test]
panic = "unwind"

[dependencies]
mae_macros = { git = "ssh://git@github.com/Mae-Technologies/mae_macros.git", branch = "fix/api-compat-service-breakout" }
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "postgres", "runtime-async-std"] }
serde = { version = "1.0.228", features = ["derive"] }
num = "0.4.3"
anyhow = "1.0.100"
serde-aux = "4.7.0"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15.19"
actix-web = "4.12.1"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.6.0"
tracing = { version = "0.1.44", default-features = false, features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "registry"] }
thiserror = "2.0.17"

[dev-dependencies]
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# your existing sqlx/tokio versions may differ; keep yours if already working
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate"] }

testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
pretty_assertions = "1.4.1"
